--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,11 @@
       <version>1.10.0</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>javax.persistence</groupId>
+      <artifactId>javax.persistence-api</artifactId>
+      <version>2.2</version>
+    </dependency>
   </dependencies>
 
   <!-- ==================================================================== -->
